kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tengen-tetris
spec:
  selector:
    matchLabels:
      app: tengen-tetris
  serviceName: "tengen-tetris"
  replicas: 1 
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: tengen-tetris
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: tengen-tetris
        image: docker.io/davidl21/tengen-tetris:latest
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: sqlite
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: sqlite
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ""
      resources:
        requests:
          storage: 1Gi
