kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tengen-tetris
  labels:
    app: tengen-tetris
spec:
  ports:
  - port: 8080
    name: web
  selector:
    app: tengen-tetris
