kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "tengen-tetris.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tengen-tetris
            port:
              number: 8080
